--- a/views/details.erb
+++ b/views/details.erb
@@ -5,4 +5,13 @@
 	<br />
 	<br />
 	Added at <%= @row['created_date'] %>
+	<br />
 </p>
+<br />
+<h4>Comments:</h4>
+<p>
+	<form action="/<%= @row['id'] %>" method="POST" role="form">
+		<textarea name="content" class="form-control" rows="6" placeholder="Type comment text here"></textarea>
+		<br />
+  		<button type="submit" class="btn btn-primary">Add comment</button>
+	</form>
