--- a/views/details.erb
+++ b/views/details.erb
@@ -1,17 +1,27 @@
 <h4>Post details:</h4>
-	<p>
 	<br />
-	<%= @row['content'] %>
+	<p>
+		<%= @row['content'] %>
 	<br />
 	<br />
 	Added at <%= @row['created_date'] %>
-	<br />
 </p>
 <br />
 <h4>Comments:</h4>
+
+<% @comments.each do |comment| %>
+	<p>
+		<%= comment['content'] %>
+		<br />
+		<br />
+		<span style="font - size: 75%; color: # 999"> Added at <%= comment['created_date'] %> </span>
+	</p>
+	<hr />
+<% end %>
 <p>
 	<form action="/details/<%= @row['id'] %>" method="POST" role="form">
 		<textarea name="content" class="form-control" rows="6" placeholder="Type comment text here"></textarea>
 		<br />
   		<button type="submit" class="btn btn-primary">Add comment</button>
 	</form>
+</p>
